--- a/editor_vietri.html
+++ b/editor_vietri.html
@@ -67,7 +67,7 @@
             justify-content: center;
             align-items: center;
             background: #fff;
-            padding: 10px;
+            padding: 0;
             position: relative;
         }
 
